--- a/pages/starters.html
+++ b/pages/starters.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/starters.css">
     <style>
+        @media screen and (min-width:992px){
+            .row{
+                display: flex;
+            }
+
+        }
+        @media screen and (max-width:992px){
+            .row{
+                flex-wrap: wrap;
+            }
+        }
+       
         body {
             background-color: black;
             margin: 0;
@@ -21,15 +33,42 @@
         }
 
         .page-heading {
-            font-size: 50px;
-            padding: 10px;
+            font-size: 75px;
+            padding: 30px 20px 30px 20px;
+            text-align: center;
+            border-bottom: 1px solid gray;
+        }
+
+        .row{            
+            justify-content: space-around;
+            padding: 20px;
+        }
+
+        img {
+            height: 550px;  
+            position: relative;
+            border-radius: 10px;
+        }
+
+        img:hover{
+            border: 5px solid black;
+            border-radius: 50px;
+        }
+
+        h2{
             text-align: center;
         }
-        
-        img{
-            height: 600px;
-            padding: 20px 200px;
+        .item-name{
+            font-size: 40px; 
+            position: absolute;
+            top: 460px;
+            left: 10px;
         }
+
+        .card{
+            position: relative;
+        }
+
     </style>
 </head>
 
@@ -37,17 +76,38 @@
     <div class="container">
         <h1 class="page-heading">Starters</h1>
         <div class="row">
-            <img src="../images/batata-vada.jpg" />
-            <img src="../images/dahi-vada.jpg" />
+            <div class="card">
+                <a href="/pages/starters/batata-vada.html"><img src="../images/batata-vada.jpg" /></a>
+                <h2 class="item-name">Batata Vada</h2>
+            </div>
+
+            <div class="card">
+                <a href="/pages/starters/dahi-vada.html"><img src="../images/dahi-vada.jpg" /></a>
+                <h2 class="item-name">Dahi Vada</h2>
+            </div>
+
+            <div class="card">
+                <img src="../images/eggless-cookies.jpg" />
+                <h2 class="item-name">Eggless Cookies</h2>
+            </div>
         </div>
         <div class="row">
-            <img src="../images/eggless-cookies.jpg" />  
-            <img src="../images/paneer-65-recipe.jpg" />          
+            <div class="card">
+                <img src="../images/paneer-65-recipe.jpg" />
+                <h2 class="item-name">Paneer 65</h2>
+            </div>
+
+            <div class="card">
+                <img src="../images/paneer-tikka-recipe.jpg" />
+                <h2 class="item-name">Paneer Tikka</h2>
+            </div>
+
+            <div class="card">
+                <img src="../images/methi-muthia-recipe.jpg" />
+                <h2 class="item-name">Methi Muthia</h2>
+            </div>
         </div>
-        <div class="row">
-            <img src="../images/paneer-tikka-recipe.jpg" />
-            <img src="../images/tandoori-aloo-recipe.jpg" />
-        </div>
+
     </div>
 </body>
 
