Added eggless-cookies page

--- a/pages/starters.html
+++ b/pages/starters.html
@@ -48,11 +48,13 @@
             height: 550px;  
             position: relative;
             border-radius: 10px;
+            box-shadow:0 0 10px 3px #a3a3a3;
         }
 
         img:hover{
-            border: 5px solid black;
+            border: 3px solid black;
             border-radius: 50px;
+            transition: 150ms;
         }
 
         h2{
@@ -87,23 +89,23 @@
             </div>
 
             <div class="card">
-                <img src="../images/eggless-cookies.jpg" />
+                <a href="/pages/starters/cookies.html"><img src="../images/eggless-cookies.jpg" /></a>
                 <h2 class="item-name">Eggless Cookies</h2>
             </div>
         </div>
         <div class="row">
             <div class="card">
-                <img src="../images/paneer-65-recipe.jpg" />
+                <a href="/pages/starters/paneer-65.html"><img src="../images/paneer-65-recipe.jpg" /></a>
                 <h2 class="item-name">Paneer 65</h2>
             </div>
 
             <div class="card">
-                <img src="../images/paneer-tikka-recipe.jpg" />
+                <a href="/pages/starters/paneer-tikka.html"><img src="../images/paneer-tikka-recipe.jpg" /></a>
                 <h2 class="item-name">Paneer Tikka</h2>
             </div>
 
             <div class="card">
-                <img src="../images/methi-muthia-recipe.jpg" />
+                <a href="/pages/starters/methi-muthia.html"><img src="../images/methi-muthia-recipe.jpg" /></a>
                 <h2 class="item-name">Methi Muthia</h2>
             </div>
         </div>
