Added Paneer-65 Recipe

--- a/pages/starters/batata-vada.html
+++ b/pages/starters/batata-vada.html
@@ -136,7 +136,7 @@
         
     </div>
     <div class="container">
-        <h2 class="sub-heading"> Serve your dish!!</h2>
+        <h2 class="sub-heading"><i class="fa-solid fa-plate-wheat" style="color: #000000;"></i> Serve your dish!!</h2>
         <img src="../../images/batata-vada/batata-vada-2.jpg" class="steps-img"/>
     </div>
     <div class="container">
