--- a/pages/starters/cookies.html
+++ b/pages/starters/cookies.html
@@ -125,11 +125,11 @@
         </ol>       
     </div>
     <div class="container">
-        <h2 class="sub-heading"> Serve your dish!!</h2>
+        <h2 class="sub-heading"><i class="fa-solid fa-plate-wheat" style="color: #000000;"></i> Serve your dish!!</h2>
         <img src="../../images/eggless-cookies/eggless-chocolate-chip-cookies-3.jpg" class="steps-img"/>
     </div>
     <div class="container">
-        <h3 class="sub-heading" ><i class="fa-solid fa-jar" style="color: #000000;"></i></i> Storage Instructions</h3>
+        <h3 class="sub-heading" ><i class="fa-solid fa-jar" style="color: #000000;"></i> Storage Instructions</h3>
         <ol class="steps">
             <li><b>At room temperature:</b><br/> Once cools completely, these cookies can be kept in an airtight container for up to one week.</li>
             <li><b>Freezing instructions:</b><br/> You can freeze the cookie dough for later use.</li>
