Added Recipie of Paneer Tikka

--- a/pages/starters/paneer-65.html
+++ b/pages/starters/paneer-65.html
@@ -68,6 +68,13 @@
             padding: 10px;
         }
 
+        .serve-img{
+            height: 500px;
+            display: block;
+            margin: 0 auto;
+            padding: 10px;
+        }
+
         p{
             font-size: 25px;
             padding: 10px;
@@ -136,7 +143,7 @@
     </div>
     <div class="container">
         <h2 class="sub-heading"><i class="fa-solid fa-plate-wheat" style="color: #000000;"></i> Serve your dish!!</h2>
-        <img src="../../images/Paneer-65/paneer-65-recipe-1.jpg" class="steps-img"/>
+        <img src="../../images/Paneer-65/paneer-65-recipe-1.jpg" class="serve-img"/>
     </div>
     <div class="container">
         <h3 class="sub-heading" ><i class="fa-brands fa-nutritionix" style="color: #000000;"></i> Nutrition</h3>
