--- a/pages/starters/dahi-vada.html
+++ b/pages/starters/dahi-vada.html
@@ -68,6 +68,13 @@
             padding: 10px;
         }
 
+        .serve-img{
+            height: 500px;
+            display: block;
+            margin: 0 auto;
+            padding: 10px;
+        }
+
         p{
             font-size: 25px;
             padding: 10px;
@@ -150,7 +157,7 @@
     </div>
     <div class="container">
         <h2 class="sub-heading"><i class="fa-solid fa-plate-wheat" style="color: #000000;"></i> Serve your dish!!</h2>
-        <img src="../../images/dahi-vada/dahi-vada-1.jpg" class="steps-img"/>
+        <img src="../../images/dahi-vada/dahi-vada-1.jpg" class="serve-img"/>
     </div>
     <div class="container">
         <h3 class="sub-heading" ><i class="fa-solid fa-jar" style="color: #000000;"></i> Storage Instructions</h3>
