Added Methi Muthia page

--- a/pages/starters/cookies.html
+++ b/pages/starters/cookies.html
@@ -74,7 +74,7 @@
             margin: 0 auto;
             padding: 10px;
         }
-        
+
         p{
             font-size: 25px;
             padding: 10px;
@@ -107,7 +107,7 @@
         </div>
     </div>
     <div class="container">
-        <h1 class="sub-heading"><i class="fa-solid fa-stairs" style="color: #000000;"></i>Steps To Cook:</h1>
+        <h1 class="sub-heading"><i class="fa-solid fa-arrows-spin" style="color: #000000;"></i> Steps To Cook:</h1>
         <ol class="steps">
             <li> Take all purpose flour, salt and baking soda in a bowl and whisk it until mixed. Keep it aside.</li>
             <li> In another bowl, take softened butter.</li>
