--- a/pages/starters/dahi-vada.html
+++ b/pages/starters/dahi-vada.html
@@ -107,7 +107,7 @@
         </div>
     </div>
     <div class="container">
-        <h1 class="sub-heading"><i class="fa-solid fa-stairs" style="color: #000000;"></i>Steps To Cook:</h1>
+        <h1 class="sub-heading"><i class="fa-solid fa-arrows-spin" style="color: #000000;"></i> Steps To Cook:</h1>
         <p>Make or buy two chutneys: (1) Cilantro chutney (2) Tamarind date chutney.</p>
         <h4 class="sub"><i class="fa-solid fa-arrow-right" style="color: #000000;"></i> Preparations (At least a day before):</h4>
         <ol class="steps">
