--- a/pages/starters/paneer-65.html
+++ b/pages/starters/paneer-65.html
@@ -108,7 +108,7 @@
         </div>
     </div>
     <div class="container">
-        <h1 class="sub-heading"><i class="fa-solid fa-stairs" style="color: #000000;"></i>Steps To Cook:</h1>
+        <h1 class="sub-heading"><i class="fa-solid fa-arrows-spin" style="color: #000000;"></i> Steps To Cook:</h1>
         <ol class="steps">
             <li> To make the batter, take ginger garlic paste, red chili powder, salt, curry leaves, all purpose flour, corn flour and rice flour in a bowl and mix well.</li>
             <img src="../../images/Paneer-65/paneer-65-recipe-3.jpg" class="steps-img"/>
