--- a/pages/starters/paneer-tikka.html
+++ b/pages/starters/paneer-tikka.html
@@ -115,7 +115,7 @@
         </div>
     </div>
     <div class="container">
-        <h1 class="sub-heading"><i class="fa-solid fa-stairs" style="color: #000000;"></i>Steps To Cook:</h1>
+        <h1 class="sub-heading"><i class="fa-solid fa-arrows-spin" style="color: #000000;"></i> Steps To Cook:</h1>
         <h4 class="sub"><i class="fa-solid fa-arrow-right" style="color: #000000;"></i>Marinating Paneer Tikka</h4>
         <ol class="steps">
             <li> Take greek yogurt, mustard oil, besan, ginger and garlic in a large bowl.</li>
