--- a/pages/starters/batata-vada.html
+++ b/pages/starters/batata-vada.html
@@ -106,7 +106,7 @@
         </div>
     </div>
     <div class="container">
-        <h1 class="sub-heading"><i class="fa-solid fa-stairs" style="color: #000000;"></i>Steps To Cook:</h1>
+        <h1 class="sub-heading"><i class="fa-solid fa-arrows-spin" style="color: #000000;"></i> Steps To Cook:</h1>
         <ol class="steps">
             <li>Heat the oil in a pan on medium heat. Once hot add mustard seeds and let them splutter. 
                 Then add ginger, garlic paste, green chili and curry leaves. Saute for 30-40 seconds or 
