Added design to the pages

--- a/pages/starters.html
+++ b/pages/starters.html
@@ -30,6 +30,7 @@
             background-color: white;
             width: 96%;
             margin: 0 auto;
+            border-radius: 30px;
         }
 
         .page-heading {
