--- a/pages/starters/paneer-65.html
+++ b/pages/starters/paneer-65.html
@@ -15,6 +15,7 @@
         .container {
             background-color: white;
             width: 96%;
+            border-radius: 30px;
             margin: 0 auto;
         }
 
@@ -38,6 +39,7 @@
             background-color: white;
             width: 20%;
             margin: 30px 50px 50px 50px;
+            border-radius: 30px;
         }
 
         .sub-heading{
