--- a/pages/starters/paneer-tikka.html
+++ b/pages/starters/paneer-tikka.html
@@ -16,6 +16,7 @@
             background-color: white;
             width: 96%;
             margin: 0 auto;
+            border-radius: 30px;
         }
 
         .page-heading {
@@ -39,6 +40,7 @@
             background-color: white;
             width: 20%;
             margin: 30px 50px 50px 50px;
+            border-radius: 30px;
         }
 
         .sub-heading {
