--- a/pages/starters/dahi-vada.html
+++ b/pages/starters/dahi-vada.html
@@ -16,6 +16,7 @@
             background-color: white;
             width: 96%;
             margin: 0 auto;
+            border-radius: 30px;
         }
 
         .page-heading {
@@ -38,6 +39,7 @@
             background-color: white;
             width: 25%;
             margin: 30px 50px 50px 50px;
+            border-radius: 30px;
         }
 
         .sub-heading{
