Added the common css

--- a/pages/starters/dahi-vada.html
+++ b/pages/starters/dahi-vada.html
@@ -5,83 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dahi Vada</title>
-    <style>
-        body {
-            background-color: black;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            background-color: white;
-            width: 96%;
-            margin: 0 auto;
-            border-radius: 30px;
-        }
-
-        .page-heading {
-            text-align: center;
-            font-size: 50px;
-            padding: 20px;
-            width: 90%;
-        }
-
-        .content{
-            display: flex;
-        }
-        .main-img img {
-            height: 600px;
-            position: sticky;
-            padding: 0 0 30px 400px;
-        }
-
-        .container-1 {
-            background-color: white;
-            width: 25%;
-            margin: 30px 50px 50px 50px;
-            border-radius: 30px;
-        }
-
-        .sub-heading{
-            font-size: 40px;
-            padding-left: 10px;
-            padding-top: 20px;
-            text-align: center;
-        }
-        
-        li{
-            font-size: 30px;
-        }
-
-        .steps li{
-            font-size: 25px;
-            padding: 20px;
-        }
-
-        .sub{
-            font-size: 30px;
-            margin: 10px;
-        }
-
-        .steps-img{
-            height: 400px;
-            display: block;
-            margin: 0 auto;
-            padding: 10px;
-        }
-
-        .serve-img{
-            height: 500px;
-            display: block;
-            margin: 0 auto;
-            padding: 10px;
-        }
-
-        p{
-            font-size: 25px;
-            padding: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="../../css/starters.css">
 </head>
 
 <body>
