--- a/pages/starters.html
+++ b/pages/starters.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starters</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/starters.css">
     <style>
         @media screen and (min-width:992px){
             .row{
@@ -29,15 +28,19 @@
         .container {
             background-color: white;
             width: 96%;
-            margin: 0 auto;
+            margin: 5px auto;
             border-radius: 30px;
         }
 
         .page-heading {
             font-size: 75px;
-            padding: 30px 20px 30px 20px;
+            padding:80px 20px 20px 20px;
             text-align: center;
-            border-bottom: 1px solid gray;
+        }
+
+        .sub-heading{
+            font-size: 40px;
+            text-align: center;
         }
 
         .row{            
@@ -78,6 +81,8 @@
 <body>
     <div class="container">
         <h1 class="page-heading">Starters</h1>
+        <hr/>
+        <h3 class="sub-heading">Enjoy Your favourite Starter Recipies here!</h3>
         <div class="row">
             <div class="card">
                 <a href="/pages/starters/batata-vada.html"><img src="../images/batata-vada.jpg" /></a>
