Added join our community section

--- a/pages/starters/dahi-vada.html
+++ b/pages/starters/dahi-vada.html
@@ -94,6 +94,11 @@
             <li>Fried vada (not soaked) can be stored for 4-5 days. On the day of serving, remove the vada from the fridge and bring it to room temperature. Then soak in the lukewarm water for 30-40 minutes. Make sure the water is warm (not room temperature) for soaking.</li>
         </ol>
     </div>
+    <div class="container">
+        <h3 class="sub-heading"><i class="fa-solid fa-right-to-bracket" style="color: #000000;">  </i> Join Our Community Now!</h3>
+        <p>Join our Community and add on your own recipies! <br/>Also get chance to interact with some world famous chef's and get featured on our page!</p>
+        <button class="btn">Join Now</button><br/>
+    </div>
     
     <script src="https://kit.fontawesome.com/14a1a7dd00.js" crossorigin="anonymous"></script>
 </body>
