--- a/pages/starters/paneer-65.html
+++ b/pages/starters/paneer-65.html
@@ -84,6 +84,11 @@
             <br /><br /><i>*Nutrition information is a rough estimate for 1 serving</i>
         </p>
     </div>
+    <div class="container">
+        <h3 class="sub-heading"><i class="fa-solid fa-right-to-bracket" style="color: #000000;">  </i> Join Our Community Now!</h3>
+        <p>Join our Community and add on your own recipies! <br/>Also get chance to interact with some world famous chef's and get featured on our page!</p>
+        <button class="btn">Join Now</button><br/>
+    </div>
     <script src="https://kit.fontawesome.com/14a1a7dd00.js" crossorigin="anonymous"></script>
 </body>
 
