--- a/pages/starters/batata-vada.html
+++ b/pages/starters/batata-vada.html
@@ -79,6 +79,11 @@
         It can be eaten alone with a hot cup of tea or coffee.
         This can be stuffed into the buns with other chutneys to make vada pav.</p>
     </div>
+    <div class="container">
+        <h3 class="sub-heading"><i class="fa-solid fa-right-to-bracket" style="color: #000000;">  </i> Join Our Community Now!</h3>
+        <p>Join our Community and add on your own recipies! <br/>Also get chance to interact with some world famous chef's and get featured on our page!</p>
+        <button class="btn">Join Now</button><br/>
+    </div>
     
     <script src="https://kit.fontawesome.com/14a1a7dd00.js" crossorigin="anonymous"></script>
 </body>
