Edited join us section

--- a/pages/starters.html
+++ b/pages/starters.html
@@ -117,6 +117,11 @@
         </div>
 
     </div>
+    <div class="container">
+        <h3 class="sub-heading"><i class="fa-solid fa-right-to-bracket" style="color: #000000;">  </i> Join Our Community Now!</h3>
+        <p>Join our Community and add on your own recipies! <br/>Also get chance to interact with some world famous chef's and get featured on our page!</p>
+        <button class="btn">Join Now</button><br/>
+    </div>
 </body>
 
 </html>
