--- a/pages/starters.html
+++ b/pages/starters.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starters</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/starters.css">
+    <link rel="icon" href="../../images/chef.png"/>
     <style>
         @media screen and (min-width:992px){
             .row{
@@ -32,9 +34,9 @@
             border-radius: 30px;
         }
 
-        .page-heading {
-            font-size: 75px;
-            padding:80px 20px 20px 20px;
+        .page-headings {
+            font-size: 60px;
+            padding:20px 10px 10px 10px;
             text-align: center;
         }
 
@@ -80,8 +82,10 @@
 
 <body>
     <div class="container">
-        <h1 class="page-heading">Starters</h1>
+        <h1 class="page-headings">Starters</h1>
         <hr/>
+        <p>Looking for easy, vegetarian, Indian appetizers for party, festival get-to-gather, you've come to the right place. You'll find from our favorite pakodas (like Batata-vada) to popular Paneer Starters to western starters like (Cookies).</p>
+
         <h3 class="sub-heading">Enjoy Your favourite Starter Recipies here!</h3>
         <div class="row">
             <div class="card">
