--- a/pages/starters/batata-vada.html
+++ b/pages/starters/batata-vada.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Batata-vada</title>
     <link rel="stylesheet" href="../../css/starters.css">
+    <link rel="icon" href="../../images/chef.png"/>
     </style>
 </head>
 
@@ -13,6 +14,11 @@
 
     <div class="container">
         <h1 class="page-heading"> Batata-Vada</h1>
+    </div>
+    <div class="container">
+        <h3 class="sub-heading"><i class="fa-regular fa-comments" style="color: #000000;"></i> About</h3>
+        <p>Batata vada is popular Maharashtrian street food. This can be served with a hot cup of tea/coffee or with dipping sauces like cilantro chutney or ketchup. Or batata vada can be used while making vada pav.</p>
+        <br/>
     </div>
     <div class="content">
         <div class="main-img">
