--- a/pages/starters/cookies.html
+++ b/pages/starters/cookies.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eggless-Cookies</title>
     <link rel="stylesheet" href="../../css/starters.css">
+    <link rel="icon" href="../../images/chef.png"/>
 </head>
 
 <body>
 
     <div class="container">
         <h1 class="page-heading"> Eggless-Cookies</h1>
+    </div>
+    <div class="container">
+        <h3 class="sub-heading"><i class="fa-regular fa-comments" style="color: #000000;"></i> About</h3>
+        <p>This is the BEST eggless chocolate chip cookies ever and the only basic eggless cookie recipe you need, seriously! This one cookie recipe makes tons of other recipes.</p>
+        <br/>
     </div>
     <div class="content">
         <div class="main-img">
