--- a/pages/starters/methi-muthia.html
+++ b/pages/starters/methi-muthia.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methi-Muthia</title>
     <link rel="stylesheet" href="../../css/starters.css">
+    <link rel="icon" href="../../images/chef.png"/>
 </head>
 
 <body>
 
     <div class="container">
         <h1 class="page-heading"> Methi-Muthia</h1>
+    </div>
+    <div class="container">
+        <h3 class="sub-heading"><i class="fa-regular fa-comments" style="color: #000000;"></i> About</h3>
+        <p>Methi muthia is a delicious tea-time snack from Gujarat. At home, we call it ‘methi na muthiya’ in the Gujarati language. Here I am sharing 3 methods - Steamed, Deep-fried, Air-Fryer. </p>
+        <br/>
     </div>
     <div class="content">
         <div class="main-img">
