--- a/pages/starters/paneer-65.html
+++ b/pages/starters/paneer-65.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paneer-65</title>
     <link rel="stylesheet" href="../../css/starters.css">
+    <link rel="icon" href="../../images/chef.png"/>
 </head>
 
 <body>
 
     <div class="container">
         <h1 class="page-heading"> Paneer-65</h1>
+    </div>
+    <div class="container">
+        <h3 class="sub-heading"><i class="fa-regular fa-comments" style="color: #000000;"></i> About</h3>
+        <p>Paneer 65 - better than you’ve ever had before! This Hyderabadi paneer starter recipe is deliciously bright, flavorful, spicy and super easy to make. Traditionally batter coated paneer are deep-fried into the hot oil. But to cut down the fat content, I have used the air fryer.</p>
+        <br/>
     </div>
     <div class="content">
         <div class="main-img">
