--- a/pages/starters/paneer-tikka.html
+++ b/pages/starters/paneer-tikka.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paneer-Tikka</title>
     <link rel="stylesheet" href="../../css/starters.css">
+    <link rel="icon" href="../../images/chef.png"/>
 </head>
 
 <body>
 
     <div class="container">
         <h1 class="page-heading"> Paneer-Tikka</h1>
+    </div>
+    <div class="container">
+        <h3 class="sub-heading"><i class="fa-regular fa-comments" style="color: #000000;"></i> About</h3>
+        <p>Everyone loves this paneer tikka as a starter! Paneer cubes, onions and peppers are marinated in a creamy yogurt marinade that’s rich in spices and full of flavors. Then it’s arranged on the skewers and grilled into the oven (or stovetop) to lend that perfect crave-able smokey flavor. </p>
+        <br/>
     </div>
     <div class="content">
         <div class="main-img">
