--- a/pages/starters/dahi-vada.html
+++ b/pages/starters/dahi-vada.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dahi Vada</title>
     <link rel="stylesheet" href="../../css/starters.css">
+    <link rel="icon" href="../../images/chef.png"/>
 </head>
 
 <body>
 
     <div class="container">
         <h1 class="page-heading"> Dahi-Vada</h1>
+    </div>
+    <div class="container">
+        <h3 class="sub-heading"><i class="fa-regular fa-comments" style="color: #000000;"></i> About</h3>
+        <p>This dahi vada recipe is much better than the one you get from street vendors in India. The vada always comes out super soft, melt-in-your-mouth kind. Here you’ll learn all the tips and tricks to make them perfect every time.</p>
+        <br/>
     </div>
     <div class="content">
         <div class="main-img">
