--- a/pages/home.html
+++ b/pages/home.html
@@ -3,23 +3,19 @@
     <head>
         <title>Home page</title>
         <link rel="stylesheet" href="../css/style.css">
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
     </head>
     <body>
         <div>
             <h1 class="logo">Foodie</h1>
         </div>
-        <div class="img">
-            <img src="C:\Users\shahaji waditke\Pictures/aloobaingan.jpg"/>
-        </div>
+        
             <ul class="div1">
-                <li><a>Home</a></li>
-                <li><a>Street food</a></li>
-                <li><a>Non-veg</a></li>
-                <li><a>Veg</a></li>
-                <li><a>Chinese</a></li>
-                <li><a>Starters</a></li>
+                <button class="btn"><a>Home</a></button>
+                <button class="btn"><a>Starters</a></button>
+                <button class="btn"><a>Street-food</a></button>
+                <button class="btn"><a>Non-veg</a></button>
+                <button class="btn"><a>Veg</a></button>
+                <button class="btn"><a>Chinese</a></button>
                 <button class="btn">Login</button>
                 <button class="btn">Signup</button>
                 </ul>
