--- a/pages/home.html
+++ b/pages/home.html
@@ -26,5 +26,8 @@
               <b> Welcome to <br/> Delicious Food Recipe page</b>
         </div>
         </div>
+        <footer>
+            <p>&copy;2024 Food Recipies.All rights reserved.</p>
+        </footer>
     </body>
 </html>
