chinese food recipe added

--- a/pages/card.html
+++ b/pages/card.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Recipes</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
         <div class="row">
             <div class="column">
-                <a href="momos-recipe.html">
-                    <img src="momos.jpg"  alt="Recipe 1">
+                <a href="./momos-recipe.html">
+                    <img src="../images/momos.jpg"  alt="Recipe 1">
                     <h6>Tibetan Veg Momos</h6>
                 </a>
             </div>
             </br>
             <div class="column">
                 <a href="burger-recipe.html">
-                    <img src="BURGER.jpg" alt="Recipe 2">
+                    <img src="../images/BURGER.jpg" alt="Recipe 2">
                     <h6>Delicious Burger</h6>
                 </a>
             </div>
                <div class="column">
                 <a href="sandwich-recipe.html">
-                    <img src="sandwich.jpg" alt="Recipe 3">
+                    <img src="../images/sandwich.jpg" alt="Recipe 3">
                     <h6>Cheese sandwich</h6>
                 </a>
             </div>
