--- a/pages/chinese.html
+++ b/pages/chinese.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chinese</title>
-    <link rel="stylesheet" href="../css/style.css">
+ 
     <style>
         @media screen and (min-width:992px){
             .row{
@@ -56,6 +56,10 @@
             border-radius: 50px;
             transition: 100ms;
         }
+        .sub-heading{
+            font-size: 40px;
+            text-align: center;
+        }
 
         h2{
             text-align: center;
@@ -70,21 +74,25 @@
         .card{
             position: relative;
         }
-
+        .last{
+            text-align: center;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
         <h1 class="page-heading">Chinese</h1>
+      
+             <h2 class="last"><b>Though Asian cuisines have mixed throughout history throughout Asia, the most popular origin story of the fusion food resides with Chinese labourers of Calcutta (now called Kolkata), who immigrated to British Raj India looking for work.</b></h2>
+
+        <h3 class="sub-heading">Enjoy Your favourite Chinese Recipies here!</h3>
         <div class="row">
             <div class="card">
                 <a href="../pages/chinese/hakka-noodles.html"><img src="../images/hakka-noodles.jpg" /></a>
                 <h2 class="item-name">Hakka-noodles</h2>
             </div>
-            <p>Though Asian cuisines have mixed throughout history throughout Asia, the most popular origin story of the fusion food resides with Chinese labourers of Calcutta (now called Kolkata), who immigrated to British Raj India looking for work.</p>
-
-        <h3 class="sub-heading">Enjoy Your favourite Chinese Recipies here!</h3>
+           
             <div class="card">
                 <a href="../pages/chinese/Veg-manchurian.html"><img src="../images/veg-manchurian-recipe.jpg" /></a>
                 <h2 class="item-name">Veg-manchurian</h2>
