--- a/pages/Biryani.html
+++ b/pages/Biryani.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe</title>
     <link rel="stylesheet" href="../css/starters.css">
-    <link rel="icon" href="../../images/chef.png"/>
+    <link rel="icon" href="../images/chef.png"/>
 <body>
     <img class="img"  src="./../images/shutterstock_761402230.webp" class="item1" >  
 
