--- a/pages/ChickenLollipop.html
+++ b/pages/ChickenLollipop.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe</title>
     <link rel="stylesheet" href="../css/starters.css">
-    <link rel="icon" href="../../images/chef.png"/>
+    <link rel="icon" href="../images/chef.png"/>
 </head>
 <body>
     <img class="img" src="./../images/360_F_407379443_KIdJDRuKDLOSLNT93VN3PfFh8hzGEO9P.jpg" class="item1" >  
