--- a/pages/GarlicButter.html
+++ b/pages/GarlicButter.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
     <link rel="stylesheet" href="../css/starters.css">
-    <link rel="icon" href="../../images/chef.png"/>
+    <link rel="icon" href="../images/chef.png"/>
 </head>
 <body>
     <img class="img" src="./../images/wholesomeyum-Garlic-Butter-Chicken-1.jpg" class="item1" />
