--- a/pages/chinese.html
+++ b/pages/chinese.html
@@ -74,9 +74,26 @@
         .card{
             position: relative;
         }
-        .last{
-            text-align: center;
-        }
+        .btn{
+    padding: 20px 30px;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    border-radius: 20px;
+    border: none;
+    font-size: 20px;
+    display: block;
+    margin: 0 auto;
+}
+
+.btn:hover{
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+}
+.last{
+    text-align: center;
+}
     </style>
 </head>
 
@@ -120,6 +137,11 @@
             </div>
         </div>
 
+    </div>
+    <div class="container">
+        <h3 class="sub-heading"><i class="fa-solid fa-right-to-bracket" style="color: #000000;">  </i> Join Our Community Now!</h3>
+        <p class="last">Join our Community and add on your own recipies! <br/>Also get chance to interact with some world famous chef's and get featured on our page!</p>
+        <button class="btn">Join Now</button><br/>
     </div>
 </body>
 
