--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal - www.codingnepalweb.com -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
@@ -16,11 +15,13 @@
         <a href="#">Foodie</a>
       </div>
       <ul>
-        <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
-        <li><a href="#"><i class=" fa fa-pizza-slice" aria-hidden="true"></i>Starters</a></li>
-        <li><a href="#"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Veg</a></li>
-        <li><a href="#"><i class="fa fa-drumstick-bite" aria-hidden="true"></i>Non-veg</a></li>
-        <li><a href="#"><i class="fa fa-burger" aria-hidden="true"></i>Street Food</a></li>
+        <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+        <li><a href="pages/starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i>Starters</a></li>
+        <li><a href="pages/veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Veg</a></li>
+        <li><a href="pages/veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i>Non-veg</a></li>
+        <li><a href="pages/street-food.html"><i class="fa fa-burger" aria-hidden="true"></i>Street Food</a></li>
+        <li><a href="pages/chinese.html"><i class="fa-solid fa-bowl-food"></i>Chinese</a></li>
+
       </ul>
     </div>
   </nav>
