--- a/pages/Non veg.html
+++ b/pages/Non veg.html
@@ -75,7 +75,7 @@
         .item-name {
             font-size: 40px;
             position: absolute;
-            top: 410px;
+            top: 310px;
             left: 10px;
         }
 
@@ -95,7 +95,7 @@
         <div class="row">
             <div class="card">
                 <a href="../pages/non-veg/Chickenmasala.html"><img src="../images/non-veg/chicken-masala.webp" /></a>
-                <h2 class="item-name">Chicken Curry Masala</h2>
+                <h2 class="item-name">Chicken Masala</h2>
             </div>
 
             <div class="card">
