--- a/pages/starters.html
+++ b/pages/starters.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starters</title>
     <link rel="stylesheet" href="../css/starters.css">
-    <link rel="icon" href="../../images/chef.png"/>
+    <link rel="icon" href="../images/chef.png"/>
     
     <style>
         @media screen and (min-width:992px){
