--- a/pages/street-food/momos-recipe.html
+++ b/pages/street-food/momos-recipe.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <h1 class="page-heading">Burger</h1>
+        <h1 class="page-heading">Momos</h1>
     </div>
     <div class="content">
         <div class="main-img">
