--- a/pages/chinese/Fried-rice.html
+++ b/pages/chinese/Fried-rice.html
@@ -73,5 +73,6 @@
     
     <script src="https://kit.fontawesome.com/14a1a7dd00.js" crossorigin="anonymous"></script>
 </body>
+<p>This dahi vada recipe is much better than the one you get from street vendors in India. The vada always comes out super soft, melt-in-your-mouth kind. Here you’ll learn all the tips and tricks to make them perfect every time.</p>
 
 </html>
