--- a/index.html
+++ b/index.html
@@ -6,28 +6,31 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title> Foodicted</title> 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/chef.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
    </head>
 <body>
   <nav>
     <div class="menu">
       <div class="logo">
-        <a href="index.html">Foodicted</a>
+        <a href="#">Foodicted</a>
       </div>
       <ul>
         <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
         <li><a href="pages/starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i>Starters</a></li>
-        <li><a href="pages/chinese.html"><i class="fa fa-home" aria-hidden="true"></i>Chinese</a></li>
         <li><a href="pages/veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Veg</a></li>
-        <li><a href="pages/Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i>Non-veg</a></li>
+        <li><a href="pages/veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i>Non-veg</a></li>
         <li><a href="pages/street-food.html"><i class="fa fa-burger" aria-hidden="true"></i>Street Food</a></li>
+        <li><a href="pages/chinese.html"><i class="fa-solid fa-bowl-food"></i>Chinese</a></li>
+
       </ul>
     </div>
   </nav>
-  <div class="center img">
+  <div class="img"></div>
+  <div class="center">
     <div class="title"><h6><i>Are You Hungry...?</i></h6></div>
     <div class="sub_title"><b>Don't Wait..!</b><br/>
-                Let start to order food now.
+                Let cook your favourite Recipie!!
     </div>
     <div class="btns">
       <button>Check out recipies</button>
@@ -35,8 +38,7 @@
     <div>
     <section>
     <footer>
-        <p>2024 All rights reserved by Food Recipe.</p>
-    
+        <p>2024 All rights reserved by Food Recipe.</p>    
     </footer>
     </section>
     </div>
