--- a/pages/Non veg.html
+++ b/pages/Non veg.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Non-Veg </title>
-    <link rel="icon" href="../../images/chef.png" />
+    <link rel="stylesheet" href="../css/starters.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../images/chef.png" />
     <style>
         @media screen and (min-width:992px) {
             .row {
@@ -50,7 +52,7 @@
         }
 
         img {
-            height: 400px;
+            height: 550px;
             position: relative;
             border-radius: 10px;
             box-shadow: 0 0 10px 3px #a3a3a3;
@@ -62,12 +64,6 @@
             transition: 100ms;
         }
 
-        p {
-            font-size: 25px;
-            padding: 10px;
-            text-align: center;
-        }
-
         h2 {
             text-align: center;
         }
@@ -75,17 +71,42 @@
         .item-name {
             font-size: 40px;
             position: absolute;
-            top: 310px;
+            top: 460px;
             left: 10px;
         }
 
         .card {
             position: relative;
         }
+
+        .nav ul {
+            color: white;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 
 <body>
+    <div class="menu">
+        <div class="logo" style="text-align: center;">
+            <a href="../index.html">Foodicted</a>
+        </div>
+        <div class="nav">
+            <ul>
+                <li><a href="../index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+                <li><a href="../pages/starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i>Starters</a></li>
+                <li><a href="../pages/veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Veg</a></li>
+                <li><a href="../pages/Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i>Non-veg</a></li>
+                <li><a href="../pages/street-food.html"><i class="fa fa-burger" aria-hidden="true"></i>Street Food</a></li>
+                <li><a href="../pages/chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Chinese</a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
     <div class="container">
         <h1 class="page-headings">Non-Veg </h1>
         <hr />
@@ -133,6 +154,7 @@
             chef's and get featured on our page!</p>
         <button class="btn">Join Now</button><br />
     </div>
+    <script src="https://kit.fontawesome.com/14a1a7dd00.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
