--- a/pages/street-food.html
+++ b/pages/street-food.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Street Food</title>
     <link rel="stylesheet" href="../css/starters.css">
-    <link rel="icon" href="../../images/chef.png"/>
-    
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../images/chef.png" />
     <style>
         @media screen and (min-width:992px){
             .row{
@@ -77,16 +77,34 @@
             position: relative;
         }
 
-        ul{
+        .nav ul{
             color: white;
             display: flex;
             flex-direction: row;
             justify-content: space-around;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 
 <body>
+    <div class="menu">
+        <div class="logo" style="text-align: center;">
+            <a href="../index.html">Foodicted</a>
+        </div>
+        <div class="nav">
+            <ul>
+                <li><a href="../index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+                <li><a href="../pages/starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i>Starters</a></li>
+                <li><a href="../pages/veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Veg</a></li>
+                <li><a href="../pages/Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i>Non-veg</a></li>
+                <li><a href="../pages/street-food.html"><i class="fa fa-burger" aria-hidden="true"></i>Street Food</a></li>
+                <li><a href="../pages/chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Chinese</a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
     <div class="container">
         <h1 class="page-headings">Street Food</h1>
         <hr/>
@@ -132,6 +150,7 @@
         <p>Join our Community and add on your own recipies! <br/>Also get chance to interact with some world famous chef's and get featured on our page!</p>
         <button class="btn">Join Now</button><br/>
     </div>
+    <script src="https://kit.fontawesome.com/14a1a7dd00.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
