--- a/index.html
+++ b/index.html
@@ -29,19 +29,16 @@
   <div class="center">
     <div class="title"><h6><i>Are You Hungry...?</i></h6></div>
     <div class="sub_title"><b>Don't Wait..!</b><br/>
-                Let start to order food now.
+                Let's start to cook something new.
     </div>
-    <div class="btns">
-      <button>Check out recipies</button>
-    </div>
-    <div>
-    <section>
-    <footer>
-        <p>2024 All rights reserved by Food Recipe.</p>
-    
-    </footer>
-    </section>
     </div>
   </div>
+    <div>
+    <section class="footer-section">
+    <footer>
+        <p>&copy;<span id="display year"></span> All rights reserved by Food Recipe.</p>
+    </footer>
+      </section>
+    </div>
 </body>
 </html>
