--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div>
     <section>
     <footer>
-        <p>2024 All rights reserved by Food Recipe.</p>
+        <p>2024 All rights reserved by Foodicted.</p>
     
     </footer>
     </section>
