--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title> Foodicted</title> 
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-   </head>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <title> Foodicted</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+</head>
+
 <body>
   <nav>
     <div class="menu">
@@ -17,29 +20,33 @@
       <ul>
         <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
         <li><a href="pages/starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i>Starters</a></li>
-        <li><a href="pages/chinese.html"><i class="fa fa-home" aria-hidden="true"></i>Chinese</a></li>
         <li><a href="pages/veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Veg</a></li>
         <li><a href="pages/Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i>Non-veg</a></li>
         <li><a href="pages/street-food.html"><i class="fa fa-burger" aria-hidden="true"></i>Street Food</a></li>
+        <li><a href="pages/chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Chinese</a>
+        </li>
       </ul>
     </div>
   </nav>
   <div class="center img">
-    <div class="title"><h6><i>Are You Hungry...?</i></h6></div>
-    <div class="sub_title"><b>Don't Wait..!</b><br/>
-                Let start to order food now.
+    <div class="title">
+      <h6><i>Are You Hungry...?</i></h6>
+    </div>
+    <div class="sub_title"><b>Don't Wait..!</b><br />
+      Let start to order food now.
     </div>
     <div class="btns">
       <button>Check out recipies</button>
     </div>
     <div>
-    <section>
-    <footer>
-        <p>2024 All rights reserved by Food Recipe.</p>
-    
-    </footer>
-    </section>
+      <section>
+        <footer>
+          <p>2024 All rights reserved by Foodicted.</p>
+
+        </footer>
+      </section>
     </div>
   </div>
 </body>
+
 </html>
