--- a/pages/chinese.html
+++ b/pages/chinese.html
@@ -70,7 +70,7 @@
         }
 
         .item-name {
-            font-size: 40px;
+            font-size: 35px;
             position: absolute;
             top: 460px;
             left: 10px;
@@ -111,7 +111,7 @@
     <div class="container">
         <h1 class="page-heading">Chinese</h1>
       
-             <h2 class="last"><b>Though Asian cuisines have mixed throughout history throughout Asia, the most popular origin story of the fusion food resides with Chinese labourers of Calcutta (now called Kolkata), who immigrated to British Raj India looking for work.</b></h2>
+             <p>Though Asian cuisines have mixed throughout history throughout Asia, the most popular origin story of the fusion food resides with Chinese labourers of Calcutta (now called Kolkata), who immigrated to British Raj India looking for work.</b></p>
 
         <h3 class="sub-heading">Enjoy Your favourite Chinese Recipies here!</h3>
         <div class="row">
